Add build-tool clue demo; misc deck polish
- README.md / slides.md: added a verified live demo to "The Clue in Your
  Build Tool" (Section 4) showing -source/-target silently compiling
  Math.clamp() (added in Java 21) under -source 19 -target 25, while
  --release 19 correctly fails at compile time with "cannot find
  symbol". Concretely proves the "runtime surprise" the section already
  argued in the abstract. Verified on Java 26 (Temurin).
- Compact Object Headers: added the ~5-10% CPU time gain alongside the
  existing heap/cache-line/GC-pressure claims.
- Compact Object Headers demo note: dropped the "reuse/adapt... already
  in this repo" self-referential framing, kept the actionable path and
  commands.
- slides.md bio slide: replaced "Dreams of marrying Java & GPUs" with
  "Java performance freak".

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01JZ8Cv8bTbNhjthwfc1H39D